# strands-chatbot

./: .bedrock_agentcore.yaml  .env.example  .gitignore  README.md  agent.py  pyproject.toml  requirements.txt  start.sh  start_frontend.sh
backend/: api.py  requirements.txt
config/: __init__.py  settings.py
frontend/: index.html
memory/: __init__.py  memory_manager.py
tools/: __init__.py  device_control.py  knowledge_base.py
